--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
+html {
+  scroll-behavior: smooth;
+}
+@keyframes smoothScrollAnimation {
+  0% {
+      opacity: 0;
+      transform: translateY(50px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+
 /* ........................home style...................... */
 
 nav {
-  background-color: #96f2d7;
+  background-color: #96c9f2;
     text-align: center;
     position: fixed;
     top: 1px; 
@@ -36,13 +51,13 @@ nav {
   }
 .btn2{
   padding: 10px 20px;
-  background-color: #66d9e8;
+  background-color: #f6f9fa;
   font-size: 0.8em;
   border-radius: 1em;
   cursor: pointer;
 }
 .btn2:hover{
-  background-color: rgb(199, 222, 243);
+  background-color: #50e0f3;
 }
 
 
@@ -67,10 +82,11 @@ nav {
   font-size: 1.3em;
   background-color: rgb(133, 195, 252);
   cursor: pointer;
+  border: rgb(133, 195, 252);
   border-radius: 1em;
 }
 .btn1:hover{
-  background-color: #96f2d7;
+  background-color: #92def5;
 }
 .button{
   padding-left: 13em;
@@ -125,11 +141,14 @@ h1{
   padding: 10px 20px;
   background-color: #66d9e8;
   font-size: 0.8em;
+  border: #66d9e8;
   border-radius: 1em;
+  color: white;
+  font-weight: bold;
   cursor: pointer;
 }
 .btn3:hover{
-  background-color: rgb(199, 222, 243);
+  background-color: rgb(113, 178, 240);
 }
 .icon1{
   width: 20%;
@@ -233,6 +252,7 @@ h2{
 }
 .image{
   border: solid 1px grey;
+  text-align: left;
   border-radius: 5px;
   width: 25em;
   height: 15em;
@@ -241,11 +261,15 @@ h2{
 .btn-appointment{
   padding: 8px 20px;
   font-size: 0.7em;
-  background-color: #96f2d7;
+  background-color: #66d9e8;
+  cursor: pointer;
+  border: #96f2d7;
+  color: white;
+  font-weight: bold;
   border-radius: 1em;
 }
 .btn-appointment:hover{
-  background-color: #66d9e8;
+  background-color: #41d8ec;
 }
 .appoint{
   padding-left: 1em;
@@ -340,7 +364,7 @@ h2{
 .patients-sheet {
   margin-bottom: 20px;
   border: solid 2px grey;
-  padding-right: 1em;
+  padding-left: 5em;
   border-radius: 5px;
 }
 
@@ -372,13 +396,16 @@ input[type="datetime-local"] {
 button[type="submit"] {
   background-color: #66d9e8;
   color: rgb(5, 5, 5);
+  border: #66d9e8;
   padding: 10px 15px;
+  color: white;
+  font-weight: bold;
   border: none;
   cursor: pointer;
 }
 
 button[type="submit"]:hover {
-  background-color: #a7dce4;
+  background-color: #81e5f5;
 }
 h3{text-align: center;
   margin-top: 2em;
@@ -412,12 +439,12 @@ i{
 
 /* ...................................Footer........................................ */
 
-.footer {
+#contact {
         background-color: #f2f2f2;
         padding: 20px;
         font-size: 1.3em;
         margin-top: 4em;
-        background-color: #d1f3f8;
+        background-color: #8adfec;
     }
 
     .footer-top {
